extends Control


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass


func _on_enigma_light(lettre):
	match lettre:
		1:
			$Halo.show()
		2:
			$Halo2.show()
		3:
			$Halo3.show()
		4:
			$Halo4.show()
		5:
			$Halo5.show()
		6:
			$Halo6.show()
		7:
			$Halo7.show()
		8:
			$Halo8.show()
		9:
			$Halo9.show()
		10:
			$Halo10.show()
		11:
			$Halo11.show()
		12:
			$Halo12.show()
		13:
			$Halo13.show()
		14:
			$Halo14.show()
		15:
			$Halo15.show()
		16:
			$Halo16.show()
		17:
			$Halo17.show()
		18:
			$Halo18.show()
		19:
			$Halo19.show()
		20:
			$Halo20.show()
		21:
			$Halo21.show()
		22:
			$Halo22.show()
		23:
			$Halo23.show()
		24:
			$Halo24.show()
		25:
			$Halo25.show()
		26:
			$Halo26.show()
